<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:clipChildren="false"
    android:clipToPadding="false">

    <LinearLayout
        android:id="@+id/llContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_shape_rounded_white"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/inform_your_data" />

        <EditText
            android:id="@+id/etName"
            style="@style/DataInputDialogEditText"
            android:layout_marginTop="32dp"
            android:inputType="textCapWords"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:background="@drawable/bg_dialog_edittext" />

        <EditText
            android:id="@+id/etEmail"
            style="@style/DataInputDialogEditText"
            android:layout_marginTop="16dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:imeOptions="actionDone"
            android:background="@drawable/bg_dialog_edittext" />

        <Button
            android:id="@+id/btnOK"
            style="@style/DataInputDialogButton"
            android:layout_marginStart="0dp"
            android:layout_marginTop="48dp"
            android:text="@string/ok" />

    </LinearLayout>

</RelativeLayout>