<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/event_detail_toolbar_menu"
            app:navigationIcon="@drawable/ic_back_white"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsvEventDetail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        app:layout_constraintBottom_toTopOf="@+id/btnEventCheckin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivEventDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/eventDetailImageMinHeight"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_event"/>

            <TextView
                android:id="@+id/tvEventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EventDetailTitle"
                android:layout_marginHorizontal="@dimen/eventDetailStartEndMargin"
                tools:text="@string/event_name"/>

            <TextView
                android:id="@+id/tvEventDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EventDetailDate"
                android:layout_marginHorizontal="@dimen/eventDetailStartEndMargin"
                tools:text="@string/event_date"/>

            <TextView
                android:id="@+id/tvEventDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EventDetailDescription"
                android:layout_marginHorizontal="@dimen/eventDetailStartEndMargin"
                tools:text="@string/event_description"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEventCheckin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/eventDetailButtonMinHeight"
        android:text="@string/event_checkin"
        android:layout_marginHorizontal="@dimen/eventDetailStartEndMargin"
        android:layout_marginBottom="@dimen/eventDetailButtonMarginBottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>